# machine-learning-pizzas

./: README.md  app.py  pyproject.toml  testes.ipynb
